# math-and-finance-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  Home.py  README.md  main.py  pyproject.toml
pages/: 0_Home.py  1_Debt_Payoff.py  2_Composite_Rate.py
plans/: debt-payoff-core-logic-prd.json  debt-payoff-core-logic-prd.md  math-finance-tools-prd.json  math-finance-tools-prd.md
src/math_finance_tools/composite_rate/: __init__.py  calculator.py
src/math_finance_tools/debt_payoff/: __init__.py  calculator.py  models.py
tests/composite_rate/: test_calculator.py
tests/debt_payoff/: test_calculator.py  test_models.py
