[project]
name = "math-and-finance-tools"
version = "0.1.0"
description = "Expanding suite of personal finance and math calculators"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "plotly>=5.20",
    "streamlit>=1.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/math_finance_tools"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.mypy]
strict = true
mypy_path = "src"

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "mypy>=2.1.0",
]
